<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/gameTime"
        android:textSize="24sp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="177dp"
        android:text="@string/newgame" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:text="@string/continue_action" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="91dp"
        android:text="@string/pause" />

    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_above="@+id/buttons"
        android:layout_marginBottom="-4dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/moveLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/move_left"
            />

        <Button
            android:id="@+id/moveRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/move_right" />

        <Button
            android:id="@+id/moveTop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/move_top" />

        <Button
            android:id="@+id/moveBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/move_bottom" />
    </LinearLayout>
    <!-- Notice how the custom view is referenced here with
    a full package path-->

</RelativeLayout>